opnfv-quagga (%_VERSION_%-%_RELEASE_%) unstable; urgency=low

  * OPNFV Build of Quagga with Thrift Interface by %_USER_%

 -- %_USER_% %_EMAIL_%  %_DATE_%

quagga (0.99.20.1-0ubuntu0.12.04.3) precise-security; urgency=low

  * SECURITY UPDATE: denial of service via malformed ORF capability TLV
    (LP: #1018052)
    - debian/patches/CVE-2012-1820.patch: correctly follow spec in
      bgpd/bgp_open.c.
    - CVE-2012-1820

 -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Thu, 11 Oct 2012 09:57:06 -0400

quagga (0.99.20.1-0ubuntu0.12.04.2) precise-security; urgency=low

  * SECURITY UPDATE: Update to 0.99.20.1 to fix multiple security issues
    (LP: #994169)
    - Denial of service via short Link State Update packet
    - Denial of service via short network-LSA link-state advertisement
    - Denial of service via malformed Four-octet AS Number Capability
    - CVE-2012-0249
    - CVE-2012-0250
    - CVE-2012-0255
  * debian/patches/99_bgpd-fix-memory-leak-for-extra-attributes.diff:
    added fix for a bgpd memory leak related to extra attributes. Thanks to
    Debian for the regression fix.

 -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Sat, 05 May 2012 17:00:30 -0400

quagga (0.99.20.1-1) unstable; urgency=high

  * SECURITY:
    CVE-2012-0249 - Quagga ospfd DoS on malformed LS-Update packet
    CVE-2012-0250 - Quagga ospfd DoS on malformed Network-LSA data
    CVE-2012-0255 - Quagga bgpd DoS on malformed OPEN message
  * New upstream release. Closes: #664033

 -- Christian Hammers <ch@debian.org>  Fri, 16 Mar 2012 22:14:05 +0100

quagga (0.99.20-4) unstable; urgency=low

  * Switch to dpkg-source 3.0 (quilt) format.
  * Switch to changelog-format-1.0.

 -- Christian Hammers <ch@debian.org>  Sat, 25 Feb 2012 18:52:06 +0100

quagga (0.99.20-3) unstable; urgency=low

  * Added --sysconfdir back to the configure options (thanks to Sven-Haegar
    Koch). Closes: #645649

 -- Christian Hammers <ch@debian.org>  Tue, 18 Oct 2011 00:24:37 +0200
